Update Paper Io - FreezeNova (1_1_2025 2：23：23 PM).html

--- a/Paper Io - FreezeNova (1_1_2025 2：23：23 PM).html
+++ b/Paper Io - FreezeNova (1_1_2025 2：23：23 PM).html
@@ -1,7 +1,4 @@
-<!DOCTYPE html> <html><!--
- Page saved with SingleFile 
- url: https://classroomlesson.com/games/2023/unity3/paper-io/pre.html 
- saved date: Wed Jan 01 2025 14:23:23 GMT-0500 (Eastern Standard Time)
+<!DOCTYPE html> <html>)
 --><meta charset=utf-8>
 <title>Paper Io - FreezeNova</title>
 <link rel=canonical href=https://unblocked-games.s3.amazonaws.com/paper-io.html>
